<resources>
    <string name="app_name">QRCodeReader</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_notifications">Notifications</string>
    <string name="UploadProfilePicText">Upload Profile Picture</string>
    <string name="RemoveProfilePictureText">Remove Profile Picture</string>
    <string name="LocationEnableText">Location Access</string>
    <string name="BecomeOrganizerText">Become Organizer</string>
    <string name="SaveProfileText">Save Changes</string>
    <string name="CancelProfileChangeText">Cancel</string>
    <string name="profile">Profile</string>
    <string name="my_events">My Events</string>
    <string name="enter_the_number_of_attendees">Enter the number of attendees</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="firebase_message_title">Message From An Event Organizer!</string>
    <string name="msg_token_fmt">FCM Token: %1$s</string>
    <string name="limit_the_number_of_attendee">Limit the number of attendee</string>
    <string name="qr_code_reuse">QR code reuse</string>
    <string name="reuse_past_event_qr_code">Reuse past event QR code</string>
    <string name="past_events">Past Events</string>
    <string name="see_qr_code">See QR Code</string>
    <string name="browse">Browse</string>
    <string name="remove">Remove</string>
    <string name="return_string">Return</string>
    <string name="events">Events</string>
    <string name="return_text">Back to main</string>
    <string name="warning_by_reusing_a_qr_code_a_new_qr_code_will_be_generated_to_replace_the_past_event_that_the_qr_is_chosen_from">Warning: By reusing a QR code, a new QR code will be generated to replace the past event that the QR is chosen from.</string>

    <string name="ProfileEditNameText">Name</string>
    <string name="ProfileEditEmailText">Email</string>
    <string name="ProfileEditPhoneText">Phone Number</string>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="event_name_string">Event Name: </string>
    <string name="organizer_string">Organizer</string>
    <string name="location_string">Location</string>
    <string name="time_string">Time</string>
    <string name="sign_up_string">Sign up</string>
    <string name="event_poster">Event Poster</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="notifications">Notifications</string>

    <string name="upcoming_events_string">Upcoming events</string>
    <string name="add_string">Add</string>
    <string name="home_string">Home</string>
    <string name="scanner_string">Scan</string>
    <string name="notification_string">Alerts</string>
    <string name="event_string">Events</string>
    <string name="profile_string">Profile</string>


    <string name="__780__123_4567_string">(780) 123-4567</string>
    <string name="hello_example_com_string">hello@example.com</string>
    <string name="edit_string">Edit</string>
    <string name="admin_string">Admin</string>
    <string name="new_event">New Event</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reuse_qr">Reuse QR</string>
    <string name="limit">Limit</string>
    <string name="create">Create</string>
    <string name="map">Map</string>
    <string name="user_id">User ID</string>
    <string name="ca">CA</string>
    <string name="display_qr_string">Display QR</string>
    <string name="attendee_string">Attendees</string>
    <string name="map_string">Map</string>
    <string name="attendees">Attendees</string>
    <string name="attendance">Attendance</string>
    <string name="checked_in">Checked in</string>
    <string name="count">Count</string>
    <string name="notify">Notify</string>
    <string name="events_cap">Events</string>
    <string name="users_cap">Users</string>
    <string name="ImagesText">Images</string>
    <string name="OrgTitle">My created events</string>
    <string name="AtndTitle"> Signed up events</string>
    <string name="GalleryImageText">Choose from gallery</string>
    <string name="RemoveProfilePicText">Remove current picture</string>
    <string name="deviceString">Device:</string>
    <string name="event_id">Event ID:</string>
    <string name="notification">Notification</string>
    <string name="delete">Delete</string>
    <string name="clear_all">Clear All</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="event">Event</string>
    <string name="upload_poster">Upload Poster</string>
    <string name="Consent">Location</string>
    <string name="event_name">Event Name</string>
    <string name="switch_text">Switch</string>
    <string name="share">Share</string>


</resources>