<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		android_small___1
	 *	@date 		Thursday 28th of March 2024 03:20:22 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->

	<!--
		OpenAI, ChatGpt, 06/03/24
		"How do I fit an image inside a container with rounded edges"
	-->



		<RelativeLayout android:id="@+id/page_android_small___1_ek1"
			android:layout_marginTop="0dp"
			android:layout_marginStart="0dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="130dp"
				android:layout_marginStart="14dp"
				android:layout_marginEnd="14dp"
				android:layout_marginTop="13dp"
				android:layout_marginBottom="13dp"
				app:cardCornerRadius="25dp">

				<ImageView   android:id="@+id/rectangle_1"
					android:background="@drawable/rectangle_1_shape"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:scaleType="centerCrop"
					/>

				<TextView android:id="@+id/event_text"
					android:textSize="16sp"
					android:textStyle="bold"
					android:textColor="@color/event_name_color"
					android:layout_marginLeft="32dp"
					android:layout_marginTop="15dp"
					android:layout_width="wrap_content"
					android:layout_height="21.2dp"
					android:text="@string/event_name_string"
					/>

				<TextView android:id="@+id/organizer_text"
					android:textSize="16sp"
					android:textColor="@color/event_name_color"
					android:layout_marginLeft="32dp"
					android:layout_marginTop="40dp"
					android:layout_width="wrap_content"
					android:layout_height="21.2dp"
					android:text="@string/organizer_string"
					/>

				<TextView android:id="@+id/event_location_text"
					android:textSize="16sp"
					android:textColor="@color/event_name_color"
					android:layout_marginLeft="32dp"
					android:layout_marginTop="65dp"
					android:layout_width="wrap_content"
					android:layout_height="21.2dp"
					android:text="@string/location_string"
					/>

				<TextView android:id="@+id/time_text"
					android:textSize="16sp"
					android:textColor="@color/event_name_color"
					android:layout_marginLeft="32dp"
					android:layout_marginTop="90dp"
					android:layout_width="wrap_content"
					android:layout_height="21.2dp"
					android:text="@string/time_string"
					/>

			</com.google.android.material.card.MaterialCardView>





		</RelativeLayout>
</LinearLayout>