<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:cardCornerRadius="25dp">
            <ImageView
                android:id="@+id/profile_picture"
                android:src="@drawable/user_profile_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:scaleType="centerCrop"/>

        </com.google.android.material.card.MaterialCardView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginBottom="15dp">
            <TextView
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:textColor="@color/event_name_color"
                />
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/ProfileEditNameText"
                android:textColor="@color/event_name_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_id"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                />
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/ProfileEditEmailText"
                android:textColor="@color/event_name_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                />
            <TextView
                android:id="@+id/phone_region"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/ca"
                android:textColor="@color/event_name_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                />
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/__780__123_4567_string"
                android:textColor="@color/event_name_color"
                app:layout_constraintStart_toEndOf="@id/phone_region"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</LinearLayout>