<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="50"
        android:hint = "@string/ProfileEditNameText"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ProfilePic"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="50"
        android:hint = "@string/ProfileEditContactText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePic" />

    <Button
        android:id="@+id/UploadProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UploadProfilePicText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <Button
        android:id="@+id/RemoveProfilePicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemoveProfilePictureText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UploadProfileButton" />

    <ImageView
        android:id="@+id/ProfilePic"
        android:layout_width="100sp"
        android:layout_height="100sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintEnd_toStartOf="@+id/name"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>