<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="69dp"
        android:textSize="20sp"
        android:hint="@string/ProfileEditNameText"
        android:inputType="text"
        android:maxLength="50"
        android:textColor="@color/black"
        android:text ="@string/ProfileEditNameText"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePic" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="17sp"
        android:hint="@string/ProfileEditEmailText"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text ="@string/ProfileEditEmailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="17sp"
        android:hint="@string/ProfileEditPhoneText"
        android:inputType="phone|number"
        android:textColor="@color/black"
        android:text ="@string/ProfileEditPhoneText"
        android:digits="1234567890"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SpinnerRegions"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/ProfilePic"
        android:layout_width="127sp"
        android:layout_height="127sp"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle_profile"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Spinner
        android:id="@+id/SpinnerRegions"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />
</androidx.constraintlayout.widget.ConstraintLayout>